[tool.poetry]
name = "git-filter-repo"
version = "2.24.0"
description = "Quickly rewrite git repository history"
authors = ["Elijah Newren <you@example.com>"]
repository = "https://github.com/newren/git-filter-repo"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.urls]
Issues = "https://github.com/newren/git-filter-repo/issues/"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
git-filter-repo = "git_filter_repo:console.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
